[package]
name = "knyst-tools"
version = "0.3.1"
edition.workspace = true
license = "MIT OR Apache-2.0"
description = "Real time dynamic audio graph and synthesis library"
readme = "README.md"
keywords = ["audio", "synthesis", "music", "dsp", "sound"]
categories = ["multimedia::audio"]
authors = ["Erik Natanael Gustafsson <code@eriknatanael.com>"]
repository = "https://github.com/ErikNatanael/knyst"
homepage = "https://github.com/ErikNatanael/knyst"

[workspace]
members = [
  "knyst",
  "fuzz"
]

[workspace.package]
edition = '2021'

[package.metadata.docs.rs]
# Whether to pass `--all-features` to Cargo (default: false)
all-features = true

# Define deps here and use along the packages of the workspace
# by using `package = { workspace = true }`, e.g., slotmap = { workspace = true }
[workspace.dependencies]
slotmap = "1.0"
# For ergonomic error handling
thiserror = "1.0"
# For real time safe communication between threads
rtrb = "0.2"
fastrand = "1.4.1"
# Fast approximation of common float math. Probably under BSD-3.
fastapprox = "0.3"
# Downcast used to have any user data in the Resources struct
downcast-rs = "1.2.0"
# Loading audio buffers
symphonia = {version = "0.5.1", features = ["mp3"] }
# JACK audio backend
jack = { version =  "0.10" }
# CPAL audio backend
cpal = {version = "0.14.0" }

# mostly used for dev
rand = "0.8"
criterion = "0.3"
anyhow = "1.0"
dialog = "0.3"
fundsp = { version = "0.9" }

# For fuzzing
libfuzzer-sys = "0.4.0"

